# fsimulator

./: CMakeLists.txt
src/: Command.h  CommandExpression.h  Enviroment.cpp  Enviroment.h  Exceptions.h  Exceptions.h.gch  Expression.h  Expression.h.gch  Expressions.h  Interpreter.cpp  Interpreter.h  Symbol.h  Symbol.h.gch  Utils.cpp  Utils.h  fly.txt  main.cpp  test2.txt
src/Commands/: CommandCreator.h  ConditionParser.cpp  ConditionParser.h  ConnectCommand.cpp  ConnectCommand.h  Creators.h  DefineVarCommand.cpp  DefineVarCommand.h  EnterCCommand.h  EqualsCommand.cpp  EqualsCommand.h  IfCommand.cpp  IfCommand.h  OpenDataServerCommand.cpp  OpenDataServerCommand.h  PrintCommand.cpp  PrintCommand.h  SemicolonCommand.h  SleepCommand.cpp  SleepCommand.h  WhileCommand.cpp  WhileCommand.h  commandsTODO
src/Common/: Enviroment.h.gch  EnvironmentVar.cpp  EnvironmentVar.h  Exceptions.h  Utils.cpp  Utils.h
src/Databases/: Consts.cpp  Consts.h  ConstsDB.cpp  ConstsDB.h  SymbolsDB.cpp  SymbolsDB.h
src/Expressions/: BinaryExpression.h  ExpressionFactory.cpp  ExpressionFactory.h  Number.h  UnaryExpression.h  Var.h
src/Expressions/BooleanExpressions/: And.h  Bigger.h  BiggerEquals.h  CMakeLists.txt  Equals.h  NotEquals.h  Or.h  Smaller.h  SmallerEquals.h  Xor.h
src/Expressions/Expressions_operators/: CMakeLists.txt  Div.h  Minus.h  Mul.h  Neg.h  Plus.h  Pow.h
src/Sockets/: FlightDataGetterSetter.cpp  FlightDataGetterSetter.h
